--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -21,7 +21,7 @@ jobs:
           echo ${{secrets.PAT}} | docker login ghcr.io -u ${{github.actor}} --password-stdin
       - name: Build and Publish
         run: |
-          cd ${{secrets.WORK_DIR}}
+          pwd  
           docker build . --tag ${{env.REGISTRY }}/${{env.IMAGE_NAME}}
           docker push ${{env.REGISTRY}}/${{env.IMAGE_NAME}}
 
